--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@prisma/client": "5.21.1",
-    "ts-node": "^10.9.2"
+    "csv-parser": "^3.0.0",
+    "fs": "^0.0.1-security",
+    "ts-node": "^10.9.2",
+    "uuid": "^11.0.2"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
