--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@prisma/client": "5.21.1",
+    "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
+    "express": "^4.21.1",
     "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "uuid": "^11.0.2"
   }
